# nova

./: .clang-format  CMakeLists.txt  LICENSE
editor/: CMakeLists.txt
editor/src/: main.cpp
engine/: CMakeLists.txt
engine/include/nova/: api.h  pragma.h  test.h  types.h  version.h
engine/include/nova/core/: debug.h
engine/include/nova/math/: vec2.h  vec3.h  vec4.h
engine/include/nova/platform/: platform_structs.h  system.h  system_driver.h  window_api.h  window_driver.h  window_fwd.h
engine/include/nova/render/: data_format.h  render_api.h  render_device.h  render_driver.h  render_fwd.h  render_params.h  render_structs.h  renderer.h
engine/include/nova/render/params/: compute_pipeline.h  graphics_pipeline.h  render_pass.h
engine/src/: test.cpp
engine/src/core/: debug.cpp
engine/src/drivers/dx12/: render_driver.cpp  render_driver.h
engine/src/drivers/linux/: system_driver.cpp  system_driver.h
engine/src/drivers/linux/wayland/: system_driver.cpp  system_driver.h
engine/src/drivers/linux/x11/: system_driver.cpp  system_driver.h
engine/src/drivers/vulkan/: render_driver.cpp  render_driver.h  render_structs.h
engine/src/drivers/wayland/: window_driver.cpp  window_driver.h
engine/src/drivers/win32/: system_driver.cpp  system_driver.h  window_driver.cpp
engine/src/drivers/windows/: system_driver.cpp  system_driver.h
engine/src/drivers/x11/: system_driver.cpp  system_driver.h  window_driver.cpp  window_driver.h
engine/src/platform/: system.cpp  window_driver.cpp
engine/src/platform/linux/wayland/: window_driver.cpp
engine/src/platform/linux/x11/: window_driver.cpp  window_driver.h  window_structs.h  wrapper.h
engine/src/platform/macos/: window_driver.h  window_driver.mm
engine/src/platform/windows/: window_driver.cpp  window_driver.h  window_structs.h
engine/src/render/: render_device.cpp  render_driver.cpp  renderer.cpp
